added Aidan.Common name prefix - fixed naming issues

--- a/Aidan.Common.DIModule/Aidan.Common.DIModule.csproj
+++ b/Aidan.Common.DIModule/Aidan.Common.DIModule.csproj
@@ -10,8 +10,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Aidan.Common.Configuration\Aidan.Common.Configuration.csproj" />
-      <ProjectReference Include="..\Pinfluencer.SocialWrangler.Crosscutting.Utils\Pinfluencer.SocialWrangler.Crosscutting.Utils.csproj" />
-      <ProjectReference Include="..\Pinfluencer.SocialWrangler.Crosscutting.Web\Pinfluencer.SocialWrangler.Crosscutting.Web.csproj" />
+      <ProjectReference Include="..\Aidan.Common.Utils\Aidan.Common.Utils.csproj" />
+      <ProjectReference Include="..\Aidan.Common.Web\Aidan.Common.Web.csproj" />
     </ItemGroup>
 
 </Project>
