--- a/Aidan.Common.DependencyInjection/Aidan.Common.DependencyInjection.csproj
+++ b/Aidan.Common.DependencyInjection/Aidan.Common.DependencyInjection.csproj
@@ -2,16 +2,14 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <Version>1.0.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Dtos" />
+      <ProjectReference Include="..\Aidan.Common.Core\Aidan.Common.Core.csproj" />
     </ItemGroup>
 
 </Project>
