--- a/Aidan.Common.Utils/Aidan.Common.Utils.csproj
+++ b/Aidan.Common.Utils/Aidan.Common.Utils.csproj
@@ -2,16 +2,21 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <Version>1.0.0.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.7" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="NSubstitute" Version="4.2.2" />
+      <PackageReference Include="NUnit" Version="3.13.1" />
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Aidan.Common.AspNetCoreExtensions\Aidan.Common.AspNetCoreExtensions.csproj" />
       <ProjectReference Include="..\Aidan.Common.Core\Aidan.Common.Core.csproj" />
     </ItemGroup>
 
