--- a/Aidan.Common.Core/Aidan.Common.Core.csproj
+++ b/Aidan.Common.Core/Aidan.Common.Core.csproj
@@ -3,6 +3,10 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
         <Version>1.0.0</Version>
+        <Authors>Aidan Gannon</Authors>
+        <Company>Aidan</Company>
+        <PackageDescription>Core API</PackageDescription>
+        <RepositoryUrl>https://github.com/aidangannon/Aidan.Common</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
