--- a/Aidan.Common.DependencyInjection/Aidan.Common.DependencyInjection.csproj
+++ b/Aidan.Common.DependencyInjection/Aidan.Common.DependencyInjection.csproj
@@ -2,6 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <Version>1.0.0</Version>
+        <Authors>Aidan Gannon</Authors>
+        <Company>Aidan</Company>
+        <PackageDescription>DI Extensions</PackageDescription>
+        <RepositoryUrl>https://github.com/aidangannon/Aidan.Common</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
