--- a/Aidan.Common.Utils/Aidan.Common.Utils.csproj
+++ b/Aidan.Common.Utils/Aidan.Common.Utils.csproj
@@ -2,7 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
-        <Version>1.0.0.0</Version>
+        <Version>1.0.0</Version>
+        <Authors>Aidan Gannon</Authors>
+        <Company>Aidan</Company>
+        <PackageDescription>Common Implementations</PackageDescription>
+        <RepositoryUrl>https://github.com/aidangannon/Aidan.Common</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,10 +17,10 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="NSubstitute" Version="4.2.2" />
       <PackageReference Include="NUnit" Version="3.13.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Aidan.Common.AspNetCoreExtensions\Aidan.Common.AspNetCoreExtensions.csproj" />
       <ProjectReference Include="..\Aidan.Common.Core\Aidan.Common.Core.csproj" />
     </ItemGroup>
 
