--- a/Aidan.Common.Utils/Aidan.Common.Utils.csproj
+++ b/Aidan.Common.Utils/Aidan.Common.Utils.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
@@ -18,6 +19,7 @@
       <PackageReference Include="NSubstitute" Version="4.2.2" />
       <PackageReference Include="NUnit" Version="3.13.1" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
     </ItemGroup>
 
     <ItemGroup>
