added tool installations to github actions

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -18,5 +18,9 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build
+      - name: Install Nuke
+        run: dotnet tool install Nuke.GlobalTool --global
+      - name: Install Dotnet Search
+        run: dotnet tool install --global dotnet-search
       - name: Nuget push
         run: nuke -Target Push
