modified init command

--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -18,7 +18,7 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build
-      - name: Init
-        run: init.cmd
+      - name: Install Nuke
+        run: dotnet tool install Nuke.GlobalTool --global
       - name: Nuget push
         run: nuke -Target Push
