--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build
         run: dotnet build
       - name: get the sha
-        run: echo "$GITHUB_CONTEXT"| jq '.event.commits[].id' | tail -2 | head -1 |sed 's/\"//g'
+        run: echo "$GITHUB_CONTEXT"| jq '.event.commits[].id' | tail -2 | head -1
       - name: Install Nuke
         run: dotnet tool install Nuke.GlobalTool --global
       - name: Nuget push
