--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -18,8 +18,10 @@ jobs:
         run: dotnet restore
       - name: Build
         run: dotnet build
-      - name: get the sha
-        run: echo "$GITHUB_CONTEXT"| jq '.event.commits[].id' | tail -2 | head -1
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
       - name: Install Nuke
         run: dotnet tool install Nuke.GlobalTool --global
       - name: Nuget push
