--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -11,10 +11,14 @@ jobs:
       GITHUB_BEFORE_COMMIT: ${{ github.event.before }}
     steps:
       - uses: actions/checkout@v2
-      - name: Setup .NET
+      - name: Setup .NET 6
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 6.0.x
+      - name: Setup .NET Core 3
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.0.x
       - name: Install Nuke
         run: dotnet tool install Nuke.GlobalTool --global
       - name: Build
