--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,3 +1,4 @@
+name: Nuget Push
 on:
   workflow_dispatch:
     inputs:
@@ -5,7 +6,7 @@ on:
         description: 'nuget publish, choose from the following => [ core, di, utils ]'
         required: true
 jobs:
-  build_and_test:
+  build_test_and_push_library:
     runs-on: windows-latest
     env:
       NUGET_SOURCE: ${{ secrets.NUGET_SOURCE }}
